--- a/app/.htaccess
+++ b/app/.htaccess
@@ -14,12 +14,13 @@
   #######################################################################
   # REWRITING                                                           #
   #######################################################################
+  Header set Access-Control-Allow-Origin "*"
 
   # Enable rewriting
   RewriteEngine On
 
   # If its not HTTPS
-  RewriteCond %{HTTPS} off
+  #RewriteCond %{HTTPS} off
 
   # Comment out the RewriteCond above, and uncomment the RewriteCond below if you're using a load balancer (e.g. CloudFlare) for SSL
   # RewriteCond %{HTTP:X-Forwarded-Proto} !https
